turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: ')' expected but '}' found.
if(n==colors.length-1){setCouleur(colors(0)}
                                           ^